--- a/client/src/pages/SeriesDetail.css
+++ b/client/src/pages/SeriesDetail.css
@@ -246,6 +246,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  background: #111827;
 }
 
 .series-books-grid .audiobook-cover-placeholder {
